added button for personal-page

--- a/app/personal-page.html
+++ b/app/personal-page.html
@@ -1,18 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
-    <link
-      href="https://fonts.googleapis.com/css?family=Roboto:300,500,700&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Raleway:700&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,500,700&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Raleway:700&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="css/libs.min.css" />
     <link rel="stylesheet" href="css/style.min.css" />
   </head>
@@ -34,47 +29,30 @@
                     <span>Need help?</span>
                   </a>
                   Talk to an expert:
-                  <a class="header__phone" href="tel:+61383766284"
-                    >+61 3 8376 6284</a
-                  >
+                  <a class="header__phone" href="tel:+61383766284">+61 3 8376 6284</a>
                 </div>
                 <div class="header__box">
                   <div class="notification__box">
-                    <a
-                      class="notification header__circle active icon-bell-o"
-                      href="#"
-                    >
+                    <a class="notification header__circle active icon-bell-o" href="#">
                       <span>8</span>
                     </a>
                     <div class="circle__menu notification__menu">
                       <div class="circle__item icon-bell-o icons-color">
-                        <img
-                          class="circle__images"
-                          src="images/content/user_2.jpg"
-                          alt=""
-                        />
+                        <img class="circle__images" src="images/content/user_2.jpg" alt="" />
                         <div class="circle__info">
                           <div class="circle__info-thema">Need WP Help!</div>
                           <div class="circle__info-date">01 Dec, 2016</div>
                         </div>
                       </div>
                       <div class="circle__item icon-bell-o">
-                        <img
-                          class="circle__images"
-                          src="images/content/user_4.jpg"
-                          alt=""
-                        />
+                        <img class="circle__images" src="images/content/user_4.jpg" alt="" />
                         <div class="circle__info">
                           <div class="circle__info-thema">Need WP Help!</div>
                           <div class="circle__info-date">26 Nov, 2016</div>
                         </div>
                       </div>
                       <div class="circle__item icon-bell-o">
-                        <img
-                          class="circle__images"
-                          src="images/content/user_3.jpg"
-                          alt=""
-                        />
+                        <img class="circle__images" src="images/content/user_3.jpg" alt="" />
                         <div class="circle__info">
                           <div class="circle__info-thema">
                             Psd Template Help!
@@ -85,19 +63,12 @@
                     </div>
                   </div>
                   <div class="messege__box">
-                    <a
-                      class="messege header__circle active icon-envelope-o"
-                      href="#"
-                    >
+                    <a class="messege header__circle active icon-envelope-o" href="#">
                       <span>5</span>
                     </a>
                     <div class="circle__menu messege__menu">
                       <div class="circle__item icon-envelope-o icons-color">
-                        <img
-                          class="circle__images"
-                          src="images/content/user_2.jpg"
-                          alt=""
-                        />
+                        <img class="circle__images" src="images/content/user_2.jpg" alt="" />
                         <div class="circle__info">
                           <div class="circle__info-name">Kazi Fahim</div>
                           <div class="circle__info-thema">Need WP Help!</div>
@@ -105,11 +76,7 @@
                         </div>
                       </div>
                       <div class="circle__item icon-envelope-o">
-                        <img
-                          class="circle__images"
-                          src="images/content/user_4.jpg"
-                          alt=""
-                        />
+                        <img class="circle__images" src="images/content/user_4.jpg" alt="" />
                         <div class="circle__info">
                           <div class="circle__info-name">Richi Lenal</div>
                           <div class="circle__info-thema">Need WP Help!</div>
@@ -117,11 +84,7 @@
                         </div>
                       </div>
                       <div class="circle__item icon-mail-reply">
-                        <img
-                          class="circle__images"
-                          src="images/content/user_3.jpg"
-                          alt=""
-                        />
+                        <img class="circle__images" src="images/content/user_3.jpg" alt="" />
                         <div class="circle__info">
                           <div class="circle__info-name">PsdBosS</div>
                           <div class="circle__info-thema">
@@ -134,19 +97,12 @@
                   </div>
 
                   <div class="basket__box">
-                    <a
-                      class="basket header__circle active icon-shopping-cart"
-                      href="#"
-                    >
+                    <a class="basket header__circle active icon-shopping-cart" href="#">
                       <span>8</span>
                     </a>
                     <div class="circle__menu">
                       <div class="circle__item">
-                        <img
-                          class="circle__images"
-                          src="images/content/grand_ballet.jpg"
-                          alt=""
-                        />
+                        <img class="circle__images" src="images/content/grand_ballet.jpg" alt="" />
                         <div class="circle__info">
                           <div class="circle__info-name">Grand Ballet</div>
                           <div class="circle__info-thema">WordPress</div>
@@ -154,11 +110,7 @@
                         </div>
                       </div>
                       <div class="circle__item">
-                        <img
-                          class="circle__images"
-                          src="images/content/apple_device.jpg"
-                          alt=""
-                        />
+                        <img class="circle__images" src="images/content/apple_device.jpg" alt="" />
                         <div class="circle__info">
                           <div class="circle__info-name">Apple Device</div>
                           <div class="circle__info-thema">WordPress</div>
@@ -171,9 +123,7 @@
                           <div class="basket__summ-price">$118</div>
                         </div>
                         <a class="basket__btn" href="#">Go to Cart</a>
-                        <a class="basket__btn basket__btn-checkout" href="#"
-                          >Go to Checkout</a
-                        >
+                        <a class="basket__btn basket__btn-checkout" href="#">Go to Checkout</a>
                       </div>
                     </div>
                   </div>
@@ -208,21 +158,9 @@
                       </ul>
                     </div>
                   </div>
-                  <a
-                    class="header__btn header__btn-login header__btn-login--off"
-                    href="#"
-                    >Login</a
-                  >
-                  <a
-                    class="header__btn header__btn-logout header__btn-login--on"
-                    href="#"
-                    >Logout</a
-                  >
-                  <a
-                    class="header__btn header__btn-register header__btn-login--off"
-                    href="#"
-                    >Register</a
-                  >
+                  <a class="header__btn header__btn-login header__btn-login--off" href="#">Login</a>
+                  <a class="header__btn header__btn-logout header__btn-login--on" href="#">Logout</a>
+                  <a class="header__btn header__btn-register header__btn-login--off" href="#">Register</a>
                 </div>
                 <div class="header__btn-menu icon-user"></div>
               </div>
@@ -295,10 +233,7 @@
         <!-- end header -->
 
         <!-- start search -->
-        <section
-          class="search page-search"
-          style="background-image: url(images/search-bg.jpg);"
-        >
+        <section class="search page-search" style="background-image: url(images/search-bg.jpg);">
           <div class="container">
             <div class="search__inner">
               <div class="search__inner-text">
@@ -306,11 +241,7 @@
               </div>
               <div class="search__inner-form">
                 <form>
-                  <input
-                    type="text"
-                    placeholder="Search Your Keywords . . ."
-                    required
-                  />
+                  <input type="text" placeholder="Search Your Keywords . . ." required />
                   <button type="submit">
                     <img src="images/icons/search.svg" alt="" />
                   </button>
@@ -322,7 +253,7 @@
         <!--end search -->
 
         <!-- start breadcrumbs -->
-        
+
         <div class="breadcrumbs">
           <div class="container">
             <div class="breadcrumbs__inner">
@@ -341,9 +272,7 @@
             <!-- start tabs -->
             <div class="personal-info__tabs settings__tabs">
               <div class="tabs">
-                <span class="tab active angle-right" data-id="1"
-                  >Personal Information</span
-                >
+                <span class="tab active angle-right" data-id="1">Personal Information</span>
                 <span class="tab angle-right" data-id="2">Profile</span>
                 <span class="tab angle-right" data-id="3">Badges</span>
                 <span class="tab angle-right" data-id="4">E-mail Settings</span>
@@ -395,6 +324,7 @@
                           <label>Zip / Postal Code</label>
                           <input type="text" />
                         </div>
+                        <button>Update</button>
                       </form>
                     </div>
                   </div>
@@ -444,6 +374,7 @@
                           <label>Zip / Postal Code</label>
                           <input type="text" />
                         </div>
+                        <button>Update</button>
                       </form>
                     </div>
                   </div>
@@ -493,6 +424,7 @@
                           <label>Zip / Postal Code</label>
                           <input type="text" />
                         </div>
+                        <button>Update</button>
                       </form>
                     </div>
                   </div>
@@ -542,6 +474,7 @@
                           <label>Zip / Postal Code</label>
                           <input type="text" />
                         </div>
+                        <button>Update</button>
                       </form>
                     </div>
                   </div>
@@ -591,6 +524,7 @@
                           <label>Zip / Postal Code</label>
                           <input type="text" />
                         </div>
+                        <button>Update</button>
                       </form>
                     </div>
                   </div>
@@ -604,7 +538,7 @@
 
 
 
-        
+
       </div>
       <!-- start footer -->
       <footer class="footer">
@@ -623,11 +557,7 @@
                 <div class="footer__info">
                   PO Box 16122 Collins Street West Victoria 8007 Australia
                 </div>
-                <a
-                  href="tel:+61383766284"
-                  class="footer__info footer__info-phone"
-                  >+61 3 8376 6284</a
-                >
+                <a href="tel:+61383766284" class="footer__info footer__info-phone">+61 3 8376 6284</a>
               </div>
               <div class="footer__col">
                 <div class="footer__col-title">
@@ -692,4 +622,5 @@
     <script src="js/libs.min.js"></script>
     <script src="js/main.js"></script>
   </body>
+
 </html>
