--- a/app/index.html
+++ b/app/index.html
@@ -148,7 +148,7 @@
                         </li>
                         <li><a class="angle-right" href="#">Portfolio</a></li>
                         <li>
-                          <a class="angle-right" href="#">Account Setting</a>
+                          <a class="angle-right" href="personal-page.html">Account Setting</a>
                         </li>
                         <a><a class="angle-right" href="#">Downloads</a></a>
                         <li><a class="angle-right" href="#">Wishlist</a></li>
