--- a/app/new-items.html
+++ b/app/new-items.html
@@ -146,7 +146,7 @@
                                                 </li>
                                                 <li><a class="angle-right" href="#">Portfolio</a></li>
                                                 <li>
-                                                    <a class="angle-right" href="#">Account Setting</a>
+                                                    <a class="angle-right" href="personal-page.html">Account Setting</a>
                                                 </li>
                                                 <li><a class="angle-right" href="#">Downloads</a></li>
                                                 <li><a class="angle-right" href="#">Wishlist</a></li>
