added href for wordpress page

--- a/app/404.html
+++ b/app/404.html
@@ -249,7 +249,7 @@
                     </a>
                   </li>
                   <li>
-                    <a href="#">
+                    <a href="product-card.html">
                       WordPress
                     </a>
                   </li>
