--- a/app/personal-page.html
+++ b/app/personal-page.html
@@ -186,7 +186,7 @@
                     </a>
                   </li>
                   <li>
-                    <a href="#">
+                    <a href="product-card.html">
                       WordPress
                     </a>
                   </li>
