--- a/app/product-card.html
+++ b/app/product-card.html
@@ -248,7 +248,7 @@
                     </a>
                   </li>
                   <li>
-                    <a href="#">
+                    <a href="product-card.html">
                       WordPress
                     </a>
                   </li>
