--- a/app/profile.html
+++ b/app/profile.html
@@ -182,7 +182,7 @@
                     </a>
                   </li>
                   <li>
-                    <a href="#">
+                    <a href="product-card.html">
                       WordPress
                     </a>
                   </li>
