--- a/app/index.html
+++ b/app/index.html
@@ -1006,7 +1006,7 @@
         <!-- end advantages -->
 
         <!-- start author -->
-        <section class="author" style="background-image: url(/images/content/autor-bg.jpg);">
+        <section class="author" style="background-image: url(images/content/autor-bg.jpg);">
           <div class="author__box">
             <div class="author__title">
               Over <span> 20,000 </span> Author Are Involved Here!
